Name: jhc
Version:             0.8.2.1
Synopsis:            JHC Haskell Compiler
Description:         JHC haskell compiler
Homepage:            https://github.com/joe9/jhc
License:             BSD3
License-file:        LICENSE
Author:              John Meacham
Maintainer:          joe9mail@gmail.com
-- A copyright notice.
-- Copyright:
Category:            Compiler
Build-type:          Simple
Extra-source-files: README
Cabal-version:       >=1.10

executable jhc-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings

test-suite jhc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , protolude
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  other-extensions: NoImplicitPrelude, OverloadedStrings
  default-language:    Haskell2010

source-repository head
    type:      git
    location:  git@github.com:joe9/jhc.git
